增加Linux离线安装nodejs

--- a/hexo-blog/_config.yml
+++ b/hexo-blog/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Jackyting825 Bolg
-subtitle:
-description:
-keywords:
+title: 学而时习之 - jackyting825
+subtitle: jackyting825 - 不要问我人生怎能没有遗憾,往事总有某一段难堪...
+description: jackyting825,记录中的点点滴滴...
+keywords: jackyting825
 author: Jackyting825
 language:
 timezone:
